# n2n-maid

./: .gitignore  AGENTS.md  CHECKLIST.md  DEVELOPMENT.md  En-Tu.md  LICENSE  Plan.md  README.md  SUMMARY.md  config.example.toml  index.html  intro.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
icons/: README.md  generate-icons.sh
src/: App.tsx  i18n.ts  styles.css  types.ts
src-tauri/: Cargo.toml  build.rs  nsis-en.nsh  nsis-zh-CN.nsh  tauri.conf.json  wix-template.wxs
src-tauri/icons/: INSTALLER_IMAGES.md
src-tauri/src/: config.rs  main.rs  n2n_process.rs  tray.rs  windows_ready.rs
src-tauri/windows/: app.manifest
src/components/: LogViewer.tsx  Settings.tsx
