[package]
name = "n2n-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
dirs = "5.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
which = "6.0"
nix = { version = "0.29", features = ["user", "signal", "hostname"] }

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
